; ModuleID = '/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_sfe_ipv6.c_sfe_ipv6_connection_match_update_summary_stats.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_sfe_ipv6.c_sfe_ipv6_connection_match_update_summary_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfe_ipv6_connection_match = type { i64, i32, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sfe_ipv6_connection_match*)* @sfe_ipv6_connection_match_update_summary_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sfe_ipv6_connection_match_update_summary_stats(%struct.sfe_ipv6_connection_match* %0) #0 {
  %2 = alloca %struct.sfe_ipv6_connection_match*, align 8
  store %struct.sfe_ipv6_connection_match* %0, %struct.sfe_ipv6_connection_match** %2, align 8
  %3 = load %struct.sfe_ipv6_connection_match*, %struct.sfe_ipv6_connection_match** %2, align 8
  %4 = getelementptr inbounds %struct.sfe_ipv6_connection_match, %struct.sfe_ipv6_connection_match* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.sfe_ipv6_connection_match*, %struct.sfe_ipv6_connection_match** %2, align 8
  %7 = getelementptr inbounds %struct.sfe_ipv6_connection_match, %struct.sfe_ipv6_connection_match* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 8
  %9 = sext i32 %8 to i64
  %10 = add nsw i64 %9, %5
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* %7, align 8
  %12 = load %struct.sfe_ipv6_connection_match*, %struct.sfe_ipv6_connection_match** %2, align 8
  %13 = getelementptr inbounds %struct.sfe_ipv6_connection_match, %struct.sfe_ipv6_connection_match* %12, i32 0, i32 2
  store i64 0, i64* %13, align 8
  %14 = load %struct.sfe_ipv6_connection_match*, %struct.sfe_ipv6_connection_match** %2, align 8
  %15 = getelementptr inbounds %struct.sfe_ipv6_connection_match, %struct.sfe_ipv6_connection_match* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.sfe_ipv6_connection_match*, %struct.sfe_ipv6_connection_match** %2, align 8
  %18 = getelementptr inbounds %struct.sfe_ipv6_connection_match, %struct.sfe_ipv6_connection_match* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = sext i32 %19 to i64
  %21 = add nsw i64 %20, %16
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %18, align 8
  %23 = load %struct.sfe_ipv6_connection_match*, %struct.sfe_ipv6_connection_match** %2, align 8
  %24 = getelementptr inbounds %struct.sfe_ipv6_connection_match, %struct.sfe_ipv6_connection_match* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
